--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
