--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
