--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-redux": "^8.1.3",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.1"
